commit via git cmd

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <label for="journey_entry">Journey Entry</label>
         
 
-        <input type="hidden" name="subkey">
-        <input type="hidden" name="EmailAddress">
+        <!--<input type="hidden" name="subkey">
+        <input type="hidden" name="EmailAddress">-->
     </form>
 
     <script src="storeFormData.js"></script>
